--- a/index.html
+++ b/index.html
@@ -21,37 +21,51 @@
 <body>
 
   <div class="grid-container">
-    <div class="grid-item grid-item-1">
-      <p> 123 </p>
+    <div class="grid-item about">
+      <p class="josefin-sans-bold"> hola </p>
     </div>
 
-    <div class="grid-item grid-item-2">
+    <div class="grid-item photo">
       <p> 2 </p>
     </div>
 
-    <div class="grid-item grid-item-3">
+    <div class="grid-item es">
       <p> 3 </p>
     </div>
 
-    <div class="grid-item grid-item-4">
-      <p> 4 </p>
+    <div class="grid-item en">
+      <p> 4444444444444444444444444444444444444444444444444444444444 </p>
     </div>
 
-    <div class="grid-item grid-item-5">
-      <p> 5 </p>
+    <div class="grid-item projects">
+      <h3> Videogame projects </h3>
     </div>
 
-    <div class="grid-item grid-item-6">
+    <div class="grid-item github">
       <p> 6 </p>
     </div>
 
-    <div class="grid-item grid-item-7">
-      <p> 7 </p>
+    <div class="grid-item name">
+      <h1> Luis Parres </h1>
+      <h2 style="font-size: 1.5rem;"> Game developer & 3D Generalist </h1>
+
     </div>
-    <div class="grid-item grid-item-8">
+    <div class="grid-item art">
+      <h3 style="font-size: 3rem;"> 3D Art </h3>
+    </div>
+    <div class="grid-item itchio">
       <p> 8 </p>
     </div>
-    <div class="grid-item grid-item-9">
+    <div class="grid-item mail">
+      <p class="josefin-sans-semibold-italic" style="font-size: 1.2rem;"> Lparres2000@gmail.com </p>
+    </div>
+    <div class="grid-item game">
+      <p> 9 </p>
+    </div>
+    <div class="grid-item skills">
+      <p> 9 </p>
+    </div>
+    <div class="grid-item idk">
       <p> 9 </p>
     </div>
 
