Main images inserted

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- <link rel="icon" type="image/png" href="srcPaginaWeb/img/Favicon.png" /> -->
   <link rel="stylesheet" href="./styles/styles.css" type="text/css">
 
-  
+
   <!-- <script src="main.js"></script>
   <script src="phaserLib/phaser.js"></script>
   <script src="srcJuego/scripts/Game.js" type="module"></script> -->
@@ -21,20 +21,24 @@
 <body>
 
   <div class="grid-container">
+
     <div class="grid-item about">
       <p class="josefin-sans-bold"> hola </p>
     </div>
 
     <div class="grid-item photo">
-      <p> 2 </p>
     </div>
 
     <div class="grid-item es">
-      <p> 3 </p>
+      <a href="">
+        <img src="./src/img/flag_spain.png" alt="es" />
+      </a>
     </div>
 
     <div class="grid-item en">
-      <p> 4444444444444444444444444444444444444444444444444444444444 </p>
+      <a href="">
+        <img src="./src/img/flag_uk.svg" alt="en" />
+      </a>
     </div>
 
     <div class="grid-item projects">
@@ -42,29 +46,38 @@
     </div>
 
     <div class="grid-item github">
-      <p> 6 </p>
+      <a href="">
+        <img src="./src/img/logo_github.svg" alt="github" />
+      </a>
     </div>
 
     <div class="grid-item name">
       <h1> Luis Parres </h1>
       <h2 style="font-size: 1.5rem;"> Game developer & 3D Generalist </h1>
-
     </div>
+
     <div class="grid-item art">
       <h3 style="font-size: 3rem;"> 3D Art </h3>
     </div>
+
     <div class="grid-item itchio">
-      <p> 8 </p>
+      <a href="">
+        <img src="./src/img/logo_itchio.svg" alt="itch.io" />
+      </a>
     </div>
+
     <div class="grid-item mail">
       <p class="josefin-sans-semibold-italic" style="font-size: 1.2rem;"> Lparres2000@gmail.com </p>
     </div>
+
     <div class="grid-item game">
       <p> 9 </p>
     </div>
+
     <div class="grid-item skills">
       <p> 9 </p>
     </div>
+
     <div class="grid-item idk">
       <p> 9 </p>
     </div>
