--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
   <div class="grid-container">
 
     <div class="grid-item about">
-      <p class="josefin-sans-bold"> hola </p>
+      <h2>About me</h2>
+      <p class="josefin-sans-bold">Un apasionado del mundo de los videojuegos, con un firme compromiso por contribuir en la industria. Mi naturaleza curiosa y proactiva me impulsa a superar nuevos retos y demostrar mi talento en cada proyecto que me involucro.</p>
     </div>
 
     <div class="grid-item photo">
@@ -53,7 +54,7 @@
 
     <div class="grid-item name">
       <h1> Luis Parres </h1>
-      <h2 style="font-size: 1.5rem;"> Game developer & 3D Generalist </h1>
+      <h2 style="font-size: 1.5rem; margin: 10px;"> Game developer & 3D Generalist </h1>
     </div>
 
     <div class="grid-item art">
