--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- <link rel="icon" type="image/png" href="srcPaginaWeb/img/Favicon.png" /> -->
   <link rel="stylesheet" href="./styles/styles.css" type="text/css">
 
-
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <!-- <script src="main.js"></script>
   <script src="phaserLib/phaser.js"></script>
   <script src="srcJuego/scripts/Game.js" type="module"></script> -->
@@ -24,7 +24,7 @@
 
     <div class="grid-item about">
       <h2>About me</h2>
-      <p class="josefin-sans-bold">Un apasionado del mundo de los videojuegos, con un firme compromiso por contribuir en la industria. Mi naturaleza curiosa y proactiva me impulsa a superar nuevos retos y demostrar mi talento en cada proyecto que me involucro.</p>
+      <p class="nunito-regular">Un apasionado del mundo de los videojuegos, con un firme compromiso por contribuir en la industria. Mi naturaleza curiosa y proactiva me impulsa a superar nuevos retos y demostrar mi talento en cada proyecto que me involucro.</p>
     </div>
 
     <div class="grid-item photo">
@@ -54,11 +54,11 @@
 
     <div class="grid-item name">
       <h1> Luis Parres </h1>
-      <h2 style="font-size: 1.5rem; margin: 10px;"> Game developer & 3D Generalist </h1>
+      <h2> Game developer & 3D Generalist </h1>
     </div>
 
     <div class="grid-item art">
-      <h3 style="font-size: 3rem;"> 3D Art </h3>
+      <h3> 3D Art </h3>
     </div>
 
     <div class="grid-item itchio">
@@ -72,11 +72,20 @@
     </div>
 
     <div class="grid-item game">
-      <p> 9 </p>
+      <h2>Wanna play a videogame?</h2>
     </div>
 
     <div class="grid-item skills">
-      <p> 9 </p>
+      <div class="skills-wrapper">
+        <div class="skill skill1"></div>
+        <div class="skill skill2"></div>
+        <div class="skill skill3"></div>
+        <div class="skill skill4"></div>
+        <div class="skill skill5"></div>
+        <div class="skill skill6"></div>
+        <div class="skill skill7"></div>
+        <div class="skill skill8"></div>
+      </div>
     </div>
 
     <div class="grid-item idk">
