Game projects section started

--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
 
   </div>
 
+  <div class="game-projects-title"> 
+    <h4> My games </h4>
+    <h5>These are some of the games I have worked on</h5>
+  </div>
+  <div class="game-projects-grid"> 
+    <div class="projects-items"><p></p></div>
+    <div class="projects-items"><p></p></div>
+    <div class="projects-items"><p></p></div>
+    <div class="projects-items"><p></p></div>
+  </div>
 
 </body>
 
