--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
       </a>
     </div>
 
-    <div class="grid-item projects">
+    <div class="grid-item projects interactable">
       <h3> Videogame projects </h3>
     </div>
 
-    <div class="grid-item github">
-      <a href="">
-        <img src="./src/img/logo_github.svg" alt="github" />
-      </a>
+    <div class="grid-item github interactable">
+      <img src="./src/img/logo_github.svg" alt="github" />
     </div>
 
     <div class="grid-item name">
@@ -57,14 +55,13 @@
       <h2> Game developer & 3D Generalist </h1>
     </div>
 
-    <div class="grid-item art">
+    <div class="grid-item art interactable">
       <h3> 3D Art </h3>
     </div>
 
-    <div class="grid-item itchio">
-      <a href="">
-        <img src="./src/img/logo_itchio.svg" alt="itch.io" />
-      </a>
+    <div class="grid-item itchio interactable">
+      <img src="./src/img/logo_itchio.svg" alt="itch.io" />
+  
     </div>
 
     <div class="grid-item mail">
