Icons on skills. Better OnHover

--- a/index.html
+++ b/index.html
@@ -31,15 +31,11 @@
     </div>
 
     <div class="grid-item es">
-      <a href="">
-        <img src="./src/img/flag_spain.png" alt="es" />
-      </a>
+      
     </div>
 
     <div class="grid-item en">
-      <a href="">
-        <img src="./src/img/flag_uk.svg" alt="en" />
-      </a>
+
     </div>
 
     <div class="grid-item projects interactable">
@@ -47,7 +43,7 @@
     </div>
 
     <div class="grid-item github interactable">
-      <img src="./src/img/logo_github.svg" alt="github" />
+      <img src="./src/img/icons/icon_github.svg" alt="github" />
     </div>
 
     <div class="grid-item name">
@@ -60,7 +56,7 @@
     </div>
 
     <div class="grid-item itchio interactable">
-      <img src="./src/img/logo_itchio.svg" alt="itch.io" />
+      <img src="./src/img/icons/icon_itchio.svg" alt="itch.io" />
   
     </div>
 
@@ -74,14 +70,12 @@
 
     <div class="grid-item skills">
       <div class="skills-wrapper">
-        <div class="skill skill1"></div>
-        <div class="skill skill2"></div>
-        <div class="skill skill3"></div>
-        <div class="skill skill4"></div>
-        <div class="skill skill5"></div>
-        <div class="skill skill6"></div>
-        <div class="skill skill7"></div>
-        <div class="skill skill8"></div>
+        <div class="skill skill1"><img src="./src/img/icons/icon_unity.svg" alt="unity" /></div>
+        <div class="skill skill2"><img src="./src/img/icons/icon_unreal.png" alt="unreal" /></div>
+        <div class="skill skill3"><img src="./src/img/icons/icon_sdl.svg" alt="sdl" /></div>
+        <div class="skill skill4"><img src="./src/img/icons/icon_opengl.svg" alt="opengl"/></div>
+        <div class="skill skill5"><img src="./src/img/icons/icon_phaser.svg" alt="phaser" /></div>
+        <div class="skill skill6"><img src="./src/img/icons/icon_blender.svg" alt="blender" /></div>
       </div>
     </div>
 
@@ -96,10 +90,10 @@
     <h5>These are some of the games I have worked on</h5>
   </div>
   <div class="game-projects-grid"> 
-    <div class="projects-items"><p></p></div>
-    <div class="projects-items"><p></p></div>
-    <div class="projects-items"><p></p></div>
-    <div class="projects-items"><p></p></div>
+    <div class="projects-items"></div>
+    <div class="projects-items"></div>
+    <div class="projects-items"></div>
+    <div class="projects-items"></div>
   </div>
 
 </body>
