--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     <div class="grid-item about">
       <h2>About me</h2>
       <p class="nunito-regular">Un apasionado del mundo de los videojuegos, con un firme compromiso por contribuir en la industria. Mi naturaleza curiosa y proactiva me impulsa a superar nuevos retos y demostrar mi talento en cada proyecto que me involucro.</p>
+      <div class="container-buttons-about">
+        <a class="button-about" href="https://www.linkedin.com/in/luisparres/" target="_blank">
+          <p>LinkedIn</p>
+          <img src="./src/img/icons/icon_linkedin_color.svg">
+        </a>
+        <a class="button-about" href="./src/img/icons/icon_external-link.svg" target="_blank">
+          <p>Mi CV</p>
+          <img src="./src/img/icons/icon_external-link.svg">
+        </a>
+      </div>
     </div>
 
     <div class="grid-item photo">
@@ -39,7 +49,10 @@
     </div>
 
     <div class="grid-item projects interactable">
-      <h3> Videogame projects </h3>
+      <a href="#Projects">
+        <h3> Videogame projects </h3>
+      </a>
+      
     </div>
 
     <div class="grid-item github interactable">
@@ -85,7 +98,7 @@
 
   </div>
 
-  <div class="game-projects-title"> 
+  <div class="game-projects-title" id="Projects"> 
     <h4> My games </h4>
     <h5>These are some of the games I have worked on</h5>
   </div>
