All links are functional

--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
     <div class="grid-item projects interactable">
       <a href="#Projects">
         <h3> Videogame projects </h3>
-      </a>
-      
+      </a>    
     </div>
 
     <div class="grid-item github interactable">
-      <img src="./src/img/icons/icon_github.svg" alt="github" />
+      <a href="https://github.com/Lparres2000" target="_blank">
+        <img src="./src/img/icons/icon_github.svg" alt="github" />
+      </a>
     </div>
 
     <div class="grid-item name">
@@ -65,12 +66,15 @@
     </div>
 
     <div class="grid-item art interactable">
-      <h3> 3D Art </h3>
+      <a href="#Art">
+        <h3> 3D Art </h3>
+      </a> 
     </div>
 
     <div class="grid-item itchio interactable">
-      <img src="./src/img/icons/icon_itchio.svg" alt="itch.io" />
-  
+      <a href="https://lparres2000.itch.io" target="_blank">
+        <img src="./src/img/icons/icon_itchio.svg" alt="itch.io" />
+      </a>
     </div>
 
     <div class="grid-item mail">
@@ -98,15 +102,26 @@
 
   </div>
 
-  <div class="game-projects-title" id="Projects"> 
+  <div class="section-title" id="Projects"> 
     <h4> My games </h4>
     <h5>These are some of the games I have worked on</h5>
   </div>
   <div class="game-projects-grid"> 
-    <div class="projects-items"></div>
-    <div class="projects-items"></div>
-    <div class="projects-items"></div>
-    <div class="projects-items"></div>
+    <div class="projects-item"></div>
+    <div class="projects-item"></div>
+    <div class="projects-item"></div>
+    <div class="projects-item"></div>
+  </div>
+
+  <div class="section-title"id="Art">
+    <h4> My Art </h4>
+    <h5>These are some of the renders I have worked on</h5>
+  </div>
+  <div class="art-grid"> 
+    <div class="art-item"></div>
+    <div class="art-item"></div>
+    <div class="art-item"></div>
+    <div class="art-item"></div>
   </div>
 
 </body>
