--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
-  <script src="i18n/language.js"></script>
+  <script src="i18n/i18n.js"></script>
   <!-- <script src="main.js"></script>
   <script src="phaserLib/phaser.js"></script>
   <script src="srcJuego/scripts/Game.js" type="module"></script> -->
