Project card layout

--- a/index.html
+++ b/index.html
@@ -109,10 +109,27 @@
     <h5 data-i18n="projects-subtitle"></h5></h5>
   </div>
   <div class="game-projects-grid"> 
-    <div class="projects-item"></div>
-    <div class="projects-item"></div>
-    <div class="projects-item"></div>
-    <div class="projects-item"></div>
+    <div class="projects-item project1">
+      <div class="project-image">
+      </div>
+      <div class="project-info">
+        <h2 data-i18n="game1-title"></h2>
+        <div class="project-tools">
+          <img src="./src/img/icons/icon_cpp.svg" alt="cpp" />
+          <img src="./src/img/icons/icon_sdl.svg" alt="sdl" />
+        </div>
+        <p data-i18n="game1-description"></p>
+      </div>
+    </div>
+    <div class="projects-item project2">
+
+    </div>
+    <div class="projects-item project3">
+
+    </div>
+    <div class="projects-item project4">
+      
+    </div>
   </div>
 
   <div class="section-title"id="Art">
