Projects content finished

--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
     <h4 data-i18n="projects-title"></h4>
     <h5 data-i18n="projects-subtitle"></h5></h5>
   </div>
+
   <div class="game-projects-grid"> 
     <div class="projects-item project1">
-      <div class="project-image">
+      <div class="project-image"  style="background-image: url('./src/img/hollenhaus2.png');">
       </div>
       <div class="project-info">
         <h2 data-i18n="game1-title"></h2>
@@ -147,18 +148,77 @@
             <img src="./src/img/icons/icon_external-link.svg">
           </div>
         </div>
-        
-        
-
       </div>
     </div>
+
     <div class="projects-item project2">
-
+      <div class="project-image" style="background-image: url('./src/img/Arko.jpg');">
+      </div>
+      <div class="project-info">
+        <h2 data-i18n="game2-title"></h2>
+        <div class="project-tools">
+          <img src="./src/img/icons/icon_unity.svg" alt="cpp" />
+          <img src="./src/img/icons/icon_blender.svg" alt="sdl" />
+        </div>
+        <div class="project-description">
+          <p data-i18n="game2-description"></p>
+        </div>
+        <div class="container-button-play">
+          <div class="button-play">
+            <a href="https://nievalon.itch.io/hollenhaus" target="_blank">
+              <p data-i18n="button-play"></p>           
+            </a>
+            <img src="./src/img/icons/icon_external-link.svg">
+          </div>
+        </div>
+      </div>
     </div>
+
     <div class="projects-item project3">
-
+      <div class="project-image"  style="background-image: url('./src/img/survivalSpectrum.png');">
+      </div>
+      <div class="project-info">
+        <h2 data-i18n="game3-title"></h2>
+        <div class="project-tools">
+          <img src="./src/img/icons/icon_phaser.svg" alt="phaser" />
+          <img src="./src/img/icons/icon_js.svg" alt="javascript" />
+          <img src="./src/img/icons/icon_bootstrap.svg" alt="bootstrap" />
+        </div>
+        <div class="project-description">
+          <p data-i18n="game3-description"></p>
+        </div>
+        <div class="container-button-play">
+          <div class="button-play">
+            <a href="https://lparres2000.github.io/SurvivalSpectrum/" target="_blank">
+              <p data-i18n="button-play"></p>           
+            </a>
+            <img src="./src/img/icons/icon_external-link.svg">
+          </div>
+        </div>
+      </div>
     </div>
+
     <div class="projects-item project4">
+      <div class="project-image"  style="background-image: url('./src/img/animacionProcedural.png');">
+      </div>
+      <div class="project-info">
+        <h2 data-i18n="game4-title" style="font-size: 1.5rem;"></h2>
+        <div class="project-tools">
+          <img src="./src/img/icons/icon_unity.svg" alt="cpp" />
+        </div>
+        <div class="project-description">
+          <p data-i18n="game4-description"></p>
+        </div>
+        <div class="container-button-play">
+          <div class="button-play">
+            <a href="https://nievalon.itch.io/hollenhaus" target="_blank">
+              <p data-i18n="button-play"></p>           
+            </a>
+            <img src="./src/img/icons/icon_external-link.svg">
+          </div>
+        </div>
+      </div>
+    </div>
 
     </div>
   </div>
