--- a/index.html
+++ b/index.html
@@ -228,10 +228,18 @@
     <h5 data-i18n="art-subtitle"></h5>
   </div>
   <div class="art-grid"> 
-    <div class="art-item"></div>
-    <div class="art-item"></div>
-    <div class="art-item"></div>
-    <div class="art-item"></div>
+    <div class="art-item art1">
+      <video src="src/vid/arko_thumbnail.mp4" autoplay muted loop></video>
+    </div>
+    <div class="art-item art2">
+      <img src="src/img/pavillionRestaurant.png">
+    </div>
+    <div class="art-item art3">
+      <img src="src/img/snowRoom.png">
+    </div>
+    <div class="art-item art4">
+      <video src="src/vid/pixoPelota.mp4" autoplay muted loop></video>
+    </div>
   </div>
 
 </body>
