--- a/index.html
+++ b/index.html
@@ -229,16 +229,23 @@
   </div>
   <div class="art-grid"> 
     <div class="art-item art1">
-      <video src="src/vid/arko_thumbnail.mp4" autoplay muted loop></video>
+      <video preload="none" src="src/vid/arko_thumbnail.mp4" 
+      autoplay="true" poster="src/img/arko_poster.png"
+      muted="true" loop="true">
+     </video>
     </div>
     <div class="art-item art2">
-      <img src="src/img/pavillionRestaurant.png">
+      <img src="src/img/pavillionRestaurant.png" loading="lazy">
     </div>
     <div class="art-item art3">
-      <img src="src/img/snowRoom.png">
+      <img src="src/img/snowRoom.png" loading="lazy">
     </div>
     <div class="art-item art4">
-      <video src="src/vid/pixoPelota.mp4" autoplay muted loop></video>
+      <video preload="none" src="src/vid/pixo_thumbnail.mp4"
+       autoplay="true" poster="src/img/pixo_poster.png"
+       muted="true" loop="true">
+      </video>
+
     </div>
   </div>
 
