Projects section is responsive

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <div class="project-image"  style="background-image: url('./src/img/animacionProcedural.png');">
       </div>
       <div class="project-info">
-        <h2 data-i18n="game4-title" style="font-size: 1.5rem;"></h2>
+        <h2 data-i18n="game4-title"></h2>
         <div class="project-tools">
           <img src="./src/img/icons/icon_unity.svg" alt="cpp" />
         </div>
