Responsive for mobile 415px-450px

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Luis Parres</title>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, minimum-scale=0.5, user-scalable=yes">
 
   <!-- <link rel="icon" type="image/png" href="srcPaginaWeb/img/Favicon.png" /> -->
   <link rel="stylesheet" href="./style/style.css" type="text/css">
