Responsive for mobile 320px-450px

--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
       </div>
     </div>
 
-    <div class="grid-item idk">
+    <div class="grid-item empty1">
+    </div>
 
+    <div class="grid-item empty2">
     </div>
 
   </div>
