Game box "under development"

--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
 
     <div class="grid-item game">
       <h2 data-i18n="game-title"></h2>
+      <div class="loader"></div>
+      <p data-i18n="game-development"></p>
     </div>
 
     <div class="grid-item skills">
