--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <div class="grid-item github interactable">
-      <a href="https://github.com/Lparres2000" target="_blank">
+      <a href="https://github.com/Lparres" target="_blank">
         <img src="./src/img/icons/icon_github.svg" alt="github" />
       </a>
     </div>
@@ -75,7 +75,7 @@
     </div>
 
     <div class="grid-item itchio interactable">
-      <a href="https://lparres2000.itch.io" target="_blank">
+      <a href="https://lparres.itch.io" target="_blank">
         <img src="./src/img/icons/icon_itchio.svg" alt="itch.io" />
       </a>
     </div>
@@ -169,7 +169,7 @@
         </div>
         <div class="container-button-play">
           <div class="button-play">
-            <a href="https://nievalon.itch.io/hollenhaus" target="_blank">
+            <a href="https://lparres.itch.io/arko" target="_blank">
               <p data-i18n="button-play"></p>           
             </a>
             <img src="./src/img/icons/icon_external-link.svg">
