Images Art and Games

--- a/index.html
+++ b/index.html
@@ -51,9 +51,8 @@
       <a href="index.html" onclick="changeLanguage('en')"></a>
     </div>
 
-    <div class="grid-item projects interactable">
+    <div class="grid-item projects">
       <a href="#Projects">
-        <h3 data-i18n="projects-button"></h3>
       </a>    
     </div>
 
@@ -68,9 +67,8 @@
       <h2 data-i18n="name-subtitle"></h1>
     </div>
 
-    <div class="grid-item art interactable">
+    <div class="grid-item art">
       <a href="#Art">
-        <h3 data-i18n="art-button"></h3>
       </a> 
     </div>
 
