resources clasification. Added low cuality resources

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
   <div class="game-projects-grid"> 
     <div class="projects-item project1">
-      <div class="project-image"  style="background-image: url('./src/img/hollenhaus2.png');">
+      <div class="project-image"  style="background-image: url('./src/img/game_hollenhaus.jpg');">
       </div>
       <div class="project-info">
         <h2 data-i18n="game1-title"></h2>
@@ -154,7 +154,7 @@
     </div>
 
     <div class="projects-item project2">
-      <div class="project-image" style="background-image: url('./src/img/Arko.jpg');">
+      <div class="project-image" style="background-image: url('./src/img/game_arko.jpg');">
       </div>
       <div class="project-info">
         <h2 data-i18n="game2-title"></h2>
@@ -177,7 +177,7 @@
     </div>
 
     <div class="projects-item project3">
-      <div class="project-image"  style="background-image: url('./src/img/survivalSpectrum.png');">
+      <div class="project-image"  style="background-image: url('./src/img/game_survivalSpectrum.jpg');">
       </div>
       <div class="project-info">
         <h2 data-i18n="game3-title"></h2>
@@ -201,7 +201,7 @@
     </div>
 
     <div class="projects-item project4">
-      <div class="project-image"  style="background-image: url('./src/img/animacionProcedural.png');">
+      <div class="project-image"  style="background-image: url('./src/img/game_proceduralAnim.jpg');">
       </div>
       <div class="project-info">
         <h2 data-i18n="game4-title"></h2>
@@ -231,20 +231,20 @@
   </div>
   <div class="art-grid"> 
     <div class="art-item art1">
-      <video preload="none" src="src/vid/arko_thumbnail.mp4" 
-      autoplay="true" poster="src/img/arko_poster.png"
+      <video preload="none" src="src/vid/art_arko_thumbnail.mp4" 
+      autoplay="true" poster="src/img/art_poster_arko.jpg"
       muted="true" loop="true">
      </video>
     </div>
     <div class="art-item art2">
-      <img src="src/img/pavillionRestaurant.png" loading="lazy">
+      <img src="src/img/art_pavillionRestaurant.jpg" loading="lazy">
     </div>
     <div class="art-item art3">
-      <img src="src/img/snowRoom.png" loading="lazy">
+      <img src="src/img/art_snowRoom.jpg" loading="lazy">
     </div>
     <div class="art-item art4">
-      <video preload="none" src="src/vid/pixo_thumbnail.mp4"
-       autoplay="true" poster="src/img/pixo_poster.png"
+      <video preload="none" src="src/vid/art_pixo_thumbnail.mp4"
+       autoplay="true" poster="src/img/art_poster_pixo.jpg"
        muted="true" loop="true">
       </video>
 
