All links fully working

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <p data-i18n="about-button1"></p>
           <img src="./src/img/icons/icon_linkedin_color.svg">
         </a>
-        <a class="button-about" href="./src/img/icons/icon_document.svg" target="_blank">
+        <a class="button-about" href="./src/other/LuisParres_CV.pdf" target="_blank">
           <p data-i18n="about-button2"></p>
           <img src="./src/img/icons/icon_document.svg">
         </a>
@@ -191,7 +191,7 @@
         </div>
         <div class="container-button-play">
           <div class="button-play">
-            <a href="https://lparres2000.github.io/SurvivalSpectrum/" target="_blank">
+            <a href="https://lparres.github.io/SurvivalSpectrum/" target="_blank">
               <p data-i18n="button-play"></p>           
             </a>
             <img src="./src/img/icons/icon_external-link.svg">
@@ -213,7 +213,7 @@
         </div>
         <div class="container-button-play">
           <div class="button-play">
-            <a href="https://nievalon.itch.io/hollenhaus" target="_blank">
+            <a href="https://github.com/Lparres/AnimacionProcedural/" target="_blank">
               <p data-i18n="button-play"></p>           
             </a>
             <img src="./src/img/icons/icon_external-link.svg">
